First and second element of styling added
Gave the first button a black background with white text. Gave the
second button a yellow background.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button class="first and both">Click Me!</button>
+    <button class="second and both">No, Click Me!</button>
 
 <body>
     
